nesc-frontend/src/test/resources/integration/programs/good/good09/M.nc
module M
{
   typedef int custom_t;
}
implementation
{
   int i;
}
